# super-js

./: .gitattributes  .gitignore  CHECKLIST.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  STABILITY.md  TRADEMARK.md  package-lock.json  package.json  tsconfig.json
.changeset/: README.md
.claude/: settings.json
.cursor/agents/: v1.0-workstream-template.md  v1.0-ws-a1-spec-freeze.md  v1.0-ws-a2-error-codes.md  v1.0-ws-a3-docs-infra.md  v1.0-ws-a4a-tour.md  v1.0-ws-a4b-migration.md  v1.0-ws-a4c-api-ref.md  v1.0-ws-a4d-why-sjs.md  v1.0-ws-a4e-compat.md  v1.0-ws-a4f-perf.md  v1.0-ws-a5-migrate-proto.md  v1.0-ws-a6-governance.md  v1.0-ws-a7-node24.md  v1.0-ws-a8-mvb-fastify.md  v1.0-ws-b1-playground.md  v1.0-ws-b2-dap.md  v1.0-ws-b3-types-wrappers.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: beta-interest.yml
.github/ISSUE_TEMPLATE/: beta-team.yml  bug.yml  config.yml  crash.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  playground-worker.yml  publish.yml  rc-preflight.yml  release-npm.yml  release.yml  test.yml  vscode-extension.yml  website.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backends/llvm/: README.md
backends/llvm/tests/: CMakeLists.txt  semantic_test.cpp
backends/prototype/: README.md  tsconfig.json  tsconfig.tsbuildinfo
bench/: README.md
benchmarks/: .gitignore  lsp-memory-audit.json  results.json
compiler/: .gitignore  package-lock.json  package.json
compiler/ast-graph/: index.html  package-lock.json  package.json
compiler/src/: test-lexer.js
docs/: ECMA_FEATURES.md  README.md  VERSIONING.md  deprecation.md  docusaurus.config.ts  howto-add-diagnostic.md  howto-add-language-feature.md  howto-add-typecheck-rule.md  package-lock.json  security-review.md  sidebars.ts  versions.json
docs/api/: index.md  std-async.md  std-collections.md  std-core.md  std-fs.md  std-json.md  std-math.md  std-path.md  std-process.md  std-schema.md  std-string.md  std-time.md
docs/beta/: bug-bash.md  dynamic-usage-survey.md  index.md
docs/blog/: 2024-01-01-welcome-super-js.md  2024-01-15-super-js-0-2-0-released.md  authors.yml  tags.yml
docs/comparisons/: README.md  sjs-vs-dart.md  sjs-vs-go.md  sjs-vs-js.md  sjs-vs-jvm-langs.md  sjs-vs-rust.md  sjs-vs-typescript.md
docs/compat/: index.md  matrix.json
docs/docs/: changelog.md  examples.md  intro.md  language-reference.md  roadmap.md  specification.md  tooling.md
docs/error-codes/: SJS-E001.md  SJS-E002.md  SJS-E003.md  SJS-E004.md  SJS-E005.md  (+51 more)
examples/: advanced-types-simple.sjs  advanced-types.sjs  basic.sjs  basic.test.sjs  classes-interfaces.sjs  default-export.sjs  external-lib.d.sjs  generics.sjs  hello-world.sjs  modules-exports.sjs  type-system-example.sjs  type-system-simple.sjs  utility-module.sjs  utility-types.sjs  utils.sjs
legacy/: tsconfig.json
llvm/: .gitignore  CMakeLists.txt  PROJECT_OUTLINE.md  lexer_debug.txt  main.cpp
llvm/examples/: test.js  test.sjs
llvm/include/ast/: AST.h  Expression.h  Expressions.h  Type.h  Types.h
llvm/include/lexer/: Lexer.h  LexerUtils.h  Token.h  TokenRecognizer.h
llvm/include/parser/: AST.h  ASTPrinter.h  ASTVisitor.h  ExpressionParser.h  Parser.h  ParserBase.h  StatementParser.h  TypeParser.h
llvm/include/semantic/: SemanticAnalyzer.h  SymbolTable.h
llvm/scripts/: build.sh  build_examples.sh  cleanup.sh  run.sh  test.sh
llvm/src/: CMakeLists.txt  main.cpp
llvm/src/ast/: AST.cpp  AST.h  CMakeLists.txt  Expressions.cpp  Statements.cpp  Types.cpp
llvm/src/cli/: CMakeLists.txt
llvm/src/codegen/: CMakeLists.txt  IRGenerator.cpp
llvm/src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  TokenClassifier.cpp  TokenRecognizer.cpp
llvm/src/parser/: AST.cpp  AST.h  CMakeLists.txt  ExpressionParser.cpp  Parser.cpp  Parser.h  ParserBase.cpp  StatementParser.cpp  StatementParser.h  TypeParser.cpp  TypeParser.h
llvm/src/semantic/: CMakeLists.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp
llvm/src/token/: Token.cpp
llvm/tests/: CMakeLists.txt  codegen_test.cpp  lexer_test.cpp  parser_test.cpp  semantic_test.cpp
prototype/: README.md  build.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
rfcs/: 0001-no-any-introduce-dynamic.md  0002-ban-complex-types.md  0003-sum-type-tag-representation.md  0004-result-canonical-error.md  0005-defer-editions.md  README.md
scripts/: assemble-language-spec.mjs  audit-lsp-memory.mjs  bench-lsp.mjs  bench.mjs  build-utils.js  check-api-docs.mjs  check-bench-results.mjs  check-compat-matrix.mjs  check-docs-links.mjs  check-error-pages.mjs  check-grammar.mjs  check-lsp-memory-audit.mjs  check-playground-worker.mjs  compare-backends.js  count-dynamic.mjs  gen-bench-corpus.mjs  gen-compat-matrix.mjs  gen-tour-lessons.mjs  rc-preflight.mjs  run-dir.js  run-examples.js  run-sjs.js  scaffold-types-tier-a.mjs  scaffold-types-tier-b.mjs  scaffold-types-tier-c.mjs  scaffold-types-tier-d.mjs  scaffold-types-tier-e.mjs  smoke-playground-run.mjs  sync-api-docs.mjs  sync-error-pages.mjs  validate-config.mjs  validate-diagnostics.mjs  validate-grammar.mjs  worktree-create.sh  worktree-lib.mjs  worktree-list.sh  worktree-remove.sh
spec/: dts-dynamic-reasons.md  error-codes.md  grammar.ebnf  parser-recovery.md
specs/: ECMAScript-SJS-Checklist.xlsx  README.md  config-schema.json  diagnostics.schema.json  error-codes.md  generate_checklist.py  grammar.ebnf  language.md  mission.md  parser-recovery.md  source-map-fidelity.md
src/: cli.ts
superjs/: .eslintrc.json  .gitignore  PROGRESS.md  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup-dts.config.mjs  tsconfig.json
tools/: README.md
vscode-extension/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package.json
website/: README.md  next.config.ts  package-lock.json  package.json
(+1466 files in other folders)
